wiLink 0.8.0 (UNRELEASED)
 * Improve file transfer support.
 * Add file sharing application.
 * Change the default download directory to "Downloads" on Windows.
 * Move wallet to application data directory.
 * Add a link from roster to a user's web page.
 * Make it possible to rename chat contacts.

wiLink 0.7.0 (2010-03-10)
 * Add support for chat state notifications.
 * Add support for file transfers.
 * Notify the user when he cannot join a chat room or gets kicked out.
 * Make it possible to manage chat room properties.
 * Make it possible to kick users out of chat rooms.
 * Make it possible to manage chat room members.
 * Add unit for RSSI measurements.
 * Make it possible to add additional chat accounts.
 * Report software version via chat.
 * Use operating system's native icon for folders.
 * Make it possible to view fullsize version of photos.
 * Add keyboard shortcuts for navigating photos.

wiLink 0.6.1 (2010-02-15)
 * Improve auto-expanding of chat rooms.
 * Parse the timestamp of chat room messages.
 * Close connection to chat server on exit.
 * Make it possible to set available/busy/offline status.
 * Re-join chat rooms after a disconnect / reconnect.

wiLink 0.6.0 (2010-02-12)
 * If we receive a subscribe request from someone in our list, accept it.
 * When a contact is added to our list, update it's vCard.
 * Add support for chat rooms.
 * Make it possible to close conversations.

wiLink 0.5.2 (2010-02-05)
 * Fix duplicated messages when archives overlap with received messages.
 * Improve text copy behaviour.
 * Fix opening links in messages.

wiLink 0.5.1 (2010-02-05)
 * Center date label in chat history.
 * Improve clearing of chat history.
 * Implement copying text from the chat history.
 * Add CTRL-RETURN / ALT-RETURN shortcuts to enter a new chat line.

wiLink 0.5.0 (2010-02-04)
 * Improve icon for photos upload.
 * Beautify and make conversation history more compact.
 * Display remote party's nickname in conversation panel.