@@ -5,6 +5,7 @@ wiLink 0.8.0 (UNRELEASED)
  * Move wallet to application data directory.
  * Add a link from roster to a user's web page.
  * Make it possible to rename chat contacts.
+ * Treat Enter and Return keys the same way in chat input.
 
 wiLink 0.7.0 (2010-03-10)
  * Add support for chat state notifications.
